# RustLTFS

./: .gitignore  BLOCK38_FIX_SUMMARY.md  BLOCK38_ISSUE_ANALYSIS.md  Cargo.toml  DUAL_PARTITION_BACKUP_ISSUE.md  LICENSE.md  LTFSCOPYGUI_BLOCKLEN_WARNING.md  LTFS_COMPATIBILITY_PERFORMANCE_REPORT.md  README.md  README_CN.md  REFACTORING.md  SESSION_SUMMARY_UID_FIX.md  UID_ALLOCATION_FIX.md  XML_FORMAT_FIX.md  build-windows.sh  build_output.txt  check_output.txt  examples.bat  test_index.schema  test_uid_fix.md  test_xml_parse.rs  warnings.txt  warnings_full.txt
.github/workflows/: release.yml
docs/: CLI_Integration_Summary.md  LTFSCopyGUI_DirectTapeAccess_Analysis_Part1.md  LTFSCopyGUI_DirectTapeAccess_Analysis_Part2.md  LTFSCopyGUI_IndexOperations_Analysis.md  README.md
scripts/: backup-full.ps1
src/: cli.rs  display.rs  error.rs  file_ops.rs  lib.rs  locate_test.rs  logger.rs  ltfs.rs  ltfs_backup.rs  ltfs_index.rs  ltfs_index_test.rs  main.rs  scsi.rs  tape.rs  tape_ops.rs  tape_ops_backup.rs  tests.rs  utils.rs  xml_test.rs
src/commands/: device.rs  mkltfs.rs  mod.rs  read.rs  read_data_index.rs  read_index.rs  space.rs  update_index.rs  view_index.rs  write.rs
src/ltfs/: capacity.rs  direct_access.rs  mod.rs  performance.rs  utils.rs  volume_info.rs
src/ltfs_index/: mod.rs  parser.rs  serializer.rs  types.rs  validator.rs
src/scsi/: constants.rs  core.rs  device.rs  ffi.rs  mod.rs  sense.rs  types.rs
src/scsi/commands/: basic.rs  config.rs  io.rs  mod.rs  positioning.rs
src/tape_ops/: block38_diagnostic.rs  capacity_manager.rs  core.rs  data_partition_reader.rs  deduplication.rs  device_management.rs  dual_partition_index.rs  format_operations.rs  hash.rs  index_validator.rs  mod.rs  partition_manager.rs  read_operations.rs  utils.rs  volume.rs  write_operations.rs
src/tape_ops/index/: mod.rs  read.rs
src/tape_ops/index_io/: mod.rs  read.rs  read_dual_partition.rs  read_single_partition.rs  sync.rs  write.rs
